2009-03-05 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* brokerUpc.c:
	Fixed [ 2155441 ] need support for associators/references upcalls

2009-03-03 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am:
	Fixed [ 2615815 ] clean target is not able to clean code coverage reports.
	(based on patch from Surendra kodali)

2009-03-03 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* providerDrv.c:
	Fixed [ 2658399 ] Crash in providerDrv.c with NULL indicationMI
	(patch from J. Bart Whiteley)

2009-02-28  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	Fixed [ 2649381 ] Unused fucntion definition in cimcClientSfcbLocal

2009-02-26 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* mofpp.c:
	Fixed [ 2592304 ] Memory leak in mofpp.c file.
	(patch from Surendra kodali)

2009-02-26 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am, test/stageschema.sh, test/schema/*.mof:
	Optionally install test classes during postinstall step

2009-02-17 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am, configure.ac, test/Makefile.am:
	Fixed [ 2610487 ] Make test suite optional

2009-02-12  Sean Swehla <smswehla@linux.vnet.ibm.com>

	* msgqueue.c:
	Fixed [ 2590121 ] localConnectServer only retries once after interrupt

2009-02-11  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c:
	Fixed [ 2551127 ] httpAdapter may not terminate
	(patch by Viktor Mihajlovski)

2009-02-11 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am:
	Fixed [ 2583170 ] Add test rule including gcov 

2009-02-09 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am, configure.ac:
	Fixed [ 2581295 ] Add GNU code coverage tool support for SFCB.
	(patch from Surendra Kodali)

2009-02-06 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* genSslCert.sh:
	Fixed [ 2561165 ] The genSslCert.sh SSL certificate setup has tempfile 
	races. 
	(patch from Klaus Kämpf)
