@@ -7,6 +7,7 @@ Bugs fixed:
 - 2649381 Unused fucntion definition in cimcClientSfcbLocal
 - 2658399 Crash in providerDrv.c with NULL indicationMI
 - 2615815 clean target is not able to clean code coverage reports.
+- 2663804 sfcb can segfault while parsing large arrays
 
 Changes in 1.3.3
 ================
